cfn-template.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description" : "Definition for loghandling stack combining elasticsearch with logstash and kibana.",
    "Parameters": {
        "amiId": {
            "Description": "AMI ID",
            "Type": "String",
            "MinLength": "1",
            "MaxLength": "41",
            "AllowedPattern": "ami-[a-zA-Z0-9]*",
            "ConstraintDescription": "must begin with ami- and can contain only alphanumeric characters."
        },
        "sshKey": {
            "Description": "SSH Key name",
            "Type": "String",
            "MinLength": "1",
            "MaxLength": "41"
        },
        "vpcID": {
            "Description": "VPC ID",
            "Type": "String",
            "MinLength": "1",
            "MaxLength": "41",
            "AllowedPattern": "vpc-[a-zA-Z0-9]*",
            "ConstraintDescription": "must begin with vpc- and can contain only alphanumeric characters."
        },
        "subnetID": {
            "Description": "Subnet ID",
            "Type": "String",
            "AllowedPattern": "subnet-[a-zA-Z0-9]*",
            "ConstraintDescription": "must begin with subnet- and can contain only alphanumeric characters."
        }
    },
    "Resources": {
        "iamInstanceProfile": {
            "Type": "AWS::IAM::InstanceProfile",
            "Properties": {
                "Path": "/",
                "Roles": [
                    {
                        "Ref": "iamRole"
                    }
                ]
            }
        },
        "iamRole": {
            "Type": "AWS::IAM::Role",
            "Properties": {
                "Path": "/",
                "AssumeRolePolicyDocument": {
                    "Version" : "2012-10-17",
                    "Statement": [ {
                        "Effect": "Allow",
                        "Principal": {
                            "Service": [ "ec2.amazonaws.com" ]
                        },
                        "Action": [ "sts:AssumeRole" ]
                    } ]
                },
                "Policies": [
                    {
                        "PolicyName": "ec2-access",
                        "PolicyDocument": {
                            "Version" : "2012-10-17",
                            "Statement": [
                                {
                                    "Action" : [
                                        "ec2:AttachVolume",
                                        "ec2:CreateVolume",
                                        "ec2:DeleteVolume",
                                        "ec2:CreateImage",
                                        "ec2:DescribeVolumes",
                                        "ec2:DetachVolume",
                                        "ec2:DescribeInstances",
                                        "ec2:CreateSnapshot",
                                        "ec2:DeleteSnapshot",
                                        "ec2:DescribeSnapshots",
                                        "ec2:DescribeImages",
                                        "ec2:RegisterImage",
                                        "ec2:CreateTags",
                                        "ec2:ModifyImageAttribute"
                                    ],
                                    "Effect": "Allow",
                                    "Resource": "*"
                                }
                            ]
                        }
                    }
                ]
            }
        },
        "sg": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "ELB Stack",
                "VpcId": {"Ref": "vpcID"}
            }
        },
        "sgIngressSelf": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": { "Ref": "sg" },
                "IpProtocol": "-1",
                "FromPort": "0",
                "ToPort": "65535",
                "SourceSecurityGroupId": {
                    "Ref": "sg"
                }
            }
        },
        "sgIngressSsh": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": { "Ref": "sg" },
                "IpProtocol": "tcp",
                "FromPort": "22",
                "ToPort": "22",
                "CidrIp": "10.0.0.0/8"
            }
        },
        "sgIngressIcmp": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": { "Ref": "sg" },
                "IpProtocol": "icmp",
                "FromPort": "22",
                "ToPort": "22",
                "CidrIp": "10.0.0.0/8"
            }
        },
        "smallEC2Instance" : {
            "Type" : "AWS::EC2::Instance",
            "Properties" : {
                "InstanceType": "t2.micro",
                "EbsOptimized": false,
                "ImageId" : { "Ref": "amiId"},
                "KeyName" : { "Ref": "sshKey"},
                "IamInstanceProfile" : { "Ref" : "iamInstanceProfile"},
                "SecurityGroupIds" : [{ "Ref" : "sg"}],
                "SubnetId": { "Ref" : "subnetID"},
                "Tags" : [ {
                    "Key" : "Name",
                    "Value" : "packer_benchmark_instance_small"
                } ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": ["", [
                            "#!/bin/bash -ex\n",
                            "exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1\n",
                            "yum -y install git\n",
                            "cd /tmp\n",
                            "git clone https://github.com/marco-hoyer/packer-aws-benchmark.git\n",
                            "cd /tmp/packer-aws-benchmark\n",
                            "chmod +x bootstrap_packer.sh\n",
                            "./bootstrap_packer.sh"
                        ]]
                    }
                }
            }
        }
    }
}
